INCLUDES=-I../include ${POSTGRES_INCLUDE}
MAINTAINERCLEANFILES=Makefile.in

TESTS = test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 test21 test22 test23 test24 test25 test26 test27 test28 test29 test30 test31 test32 test33 test34 test35 test36 test37 test38 test39 test40 test41 test42
check_PROGRAMS = ${TESTS}

#TESTS_ENVIRONMENT=PGDATABASE=libpqxx
# PGDATABASE, PGHOST, PGPORT, PGUSER

test1_SOURCES = test1.cxx
test1_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test2_SOURCES = test2.cxx
test2_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test3_SOURCES = test3.cxx
test3_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test4_SOURCES = test4.cxx
test4_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test5_SOURCES = test5.cxx
test5_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test6_SOURCES = test6.cxx
test6_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test7_SOURCES = test7.cxx
test7_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test8_SOURCES = test8.cxx
test8_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test9_SOURCES = test9.cxx
test9_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test10_SOURCES = test10.cxx
test10_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test11_SOURCES = test11.cxx
test11_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test12_SOURCES = test12.cxx
test12_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test13_SOURCES = test13.cxx
test13_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test14_SOURCES = test14.cxx
test14_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test15_SOURCES = test15.cxx
test15_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test16_SOURCES = test16.cxx
test16_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test17_SOURCES = test17.cxx
test17_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test18_SOURCES = test18.cxx
test18_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test19_SOURCES = test19.cxx
test19_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test20_SOURCES = test20.cxx
test20_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test21_SOURCES = test21.cxx
test21_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test22_SOURCES = test22.cxx
test22_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test23_SOURCES = test23.cxx
test23_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test24_SOURCES = test24.cxx
test24_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test25_SOURCES = test25.cxx
test25_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test26_SOURCES = test26.cxx
test26_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test27_SOURCES = test27.cxx
test27_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test28_SOURCES = test28.cxx
test28_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test29_SOURCES = test29.cxx
test29_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test30_SOURCES = test30.cxx
test30_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test31_SOURCES = test31.cxx
test31_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test32_SOURCES = test32.cxx
test32_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test33_SOURCES = test33.cxx
test33_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test34_SOURCES = test34.cxx
test34_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test35_SOURCES = test35.cxx
test35_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test36_SOURCES = test36.cxx
test36_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test37_SOURCES = test37.cxx
test37_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test38_SOURCES = test38.cxx
test38_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test39_SOURCES = test39.cxx
test39_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test40_SOURCES = test40.cxx
test40_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test41_SOURCES = test41.cxx
test41_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test42_SOURCES = test42.cxx
test42_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

