SUBDIRS = pqxx

nobase_include_HEADERS= pqxx/pqxx \
	pqxx/basic_connection pqxx/basic_connection.hxx \
	pqxx/binarystring pqxx/binarystring.hxx \
	pqxx/compiler-public.hxx \
	pqxx/compiler-internal-pre.hxx pqxx/compiler-internal-post.hxx \
	pqxx/connection pqxx/connection.hxx \
	pqxx/connection_base pqxx/connection_base.hxx \
	pqxx/connectionpolicy pqxx/connectionpolicy.hxx \
	pqxx/cursor pqxx/cursor.hxx \
	pqxx/dbtransaction pqxx/dbtransaction.hxx \
	pqxx/except pqxx/except.hxx \
	pqxx/isolation pqxx/isolation.hxx \
	pqxx/largeobject pqxx/largeobject.hxx \
	pqxx/libpq-forward.hxx \
	pqxx/nontransaction pqxx/nontransaction.hxx \
	pqxx/notify-listen pqxx/notify-listen.hxx \
	pqxx/pipeline pqxx/pipeline.hxx \
	pqxx/prepared_statement pqxx/prepared_statement.hxx \
	pqxx/result pqxx/result.hxx \
	pqxx/robusttransaction pqxx/robusttransaction.hxx \
	pqxx/strconv pqxx/strconv.hxx \
	pqxx/subtransaction pqxx/subtransaction.hxx \
	pqxx/tablereader pqxx/tablereader.hxx \
	pqxx/tablestream pqxx/tablestream.hxx \
	pqxx/tablewriter pqxx/tablewriter.hxx \
	pqxx/transaction pqxx/transaction.hxx \
	pqxx/transaction_base pqxx/transaction_base.hxx \
	pqxx/transactor pqxx/transactor.hxx \
	pqxx/trigger pqxx/trigger.hxx \
	pqxx/util pqxx/util.hxx \
	pqxx/version pqxx/version.hxx \
	pqxx/internal/gates/connection-dbtransaction-gate.hxx \
	pqxx/internal/gates/connection-largeobject-gate.hxx \
	pqxx/internal/gates/connection-notify-listener-gate.hxx \
	pqxx/internal/gates/connection-pipeline-gate.hxx \
	pqxx/internal/gates/connection-prepare-declaration-gate.hxx \
	pqxx/internal/gates/connection-prepare-invocation-gate.hxx \
	pqxx/internal/gates/connection-sql_cursor-gate.hxx \
	pqxx/internal/gates/connection-transaction-gate.hxx \
	pqxx/internal/gates/result-connection-gate.hxx \
	pqxx/internal/gates/result-creation-gate.hxx \
	pqxx/internal/gates/result-sql_cursor-gate.hxx \
	pqxx/internal/gates/transaction-subtransaction-gate.hxx \
	pqxx/internal/gates/transaction-tablereader-gate.hxx \
	pqxx/internal/gates/transaction-tablewriter-gate.hxx \
	pqxx/internal/gates/transaction-transactionfocus-gate.hxx


nobase_nodist_include_HEADERS = \
	pqxx/config-public-compiler.h

EXTRA_DIST = pqxx/version.hxx.template
