SUBDIRS = pqxx

nobase_include_HEADERS= pqxx/pqxx \
	pqxx/basic_connection pqxx/basic_connection.hxx \
	pqxx/binarystring pqxx/binarystring.hxx \
	pqxx/compiler-public.hxx \
	pqxx/compiler-internal-pre.hxx pqxx/compiler-internal-post.hxx \
	pqxx/connection pqxx/connection.hxx \
	pqxx/connection_base pqxx/connection_base.hxx \
	pqxx/connectionpolicy pqxx/connectionpolicy.hxx \
	pqxx/cursor pqxx/cursor.hxx \
	pqxx/dbtransaction pqxx/dbtransaction.hxx \
	pqxx/errorhandler pqxx/errorhandler.hxx \
	pqxx/except pqxx/except.hxx \
	pqxx/field pqxx/field.hxx \
	pqxx/isolation pqxx/isolation.hxx \
	pqxx/largeobject pqxx/largeobject.hxx \
	pqxx/nontransaction pqxx/nontransaction.hxx \
	pqxx/notification pqxx/notification.hxx \
	pqxx/notify-listen pqxx/notify-listen.hxx \
	pqxx/performance.hxx \
	pqxx/pipeline pqxx/pipeline.hxx \
	pqxx/prepared_statement pqxx/prepared_statement.hxx \
	pqxx/result pqxx/result.hxx \
	pqxx/robusttransaction pqxx/robusttransaction.hxx \
	pqxx/strconv pqxx/strconv.hxx \
	pqxx/subtransaction pqxx/subtransaction.hxx \
	pqxx/tablereader pqxx/tablereader.hxx \
	pqxx/tablestream pqxx/tablestream.hxx \
	pqxx/tablewriter pqxx/tablewriter.hxx \
	pqxx/transaction pqxx/transaction.hxx \
	pqxx/transaction_base pqxx/transaction_base.hxx \
	pqxx/transactor pqxx/transactor.hxx \
	pqxx/trigger pqxx/trigger.hxx \
	pqxx/tuple pqxx/tuple.hxx \
	pqxx/util pqxx/util.hxx \
	pqxx/version pqxx/version.hxx \
	pqxx/internal/callgate.hxx \
	pqxx/internal/libpq-forward.hxx \
	pqxx/internal/statement_parameters.hxx \
	pqxx/internal/result_data.hxx \
	pqxx/internal/gates/connection-dbtransaction.hxx \
	pqxx/internal/gates/connection-errorhandler.hxx \
	pqxx/internal/gates/connection-largeobject.hxx \
	pqxx/internal/gates/connection-notification_receiver.hxx \
	pqxx/internal/gates/connection-parameterized_invocation.hxx \
	pqxx/internal/gates/connection-pipeline.hxx \
	pqxx/internal/gates/connection-prepare-invocation.hxx \
	pqxx/internal/gates/connection-reactivation_avoidance_exemption.hxx \
	pqxx/internal/gates/connection-sql_cursor.hxx \
	pqxx/internal/gates/connection-transaction.hxx \
	pqxx/internal/gates/errorhandler-connection.hxx \
	pqxx/internal/gates/icursorstream-icursor_iterator.hxx \
	pqxx/internal/gates/icursor_iterator-icursorstream.hxx \
	pqxx/internal/gates/result-connection.hxx \
	pqxx/internal/gates/result-creation.hxx \
	pqxx/internal/gates/result-sql_cursor.hxx \
	pqxx/internal/gates/transaction-subtransaction.hxx \
	pqxx/internal/gates/transaction-tablereader.hxx \
	pqxx/internal/gates/transaction-tablewriter.hxx \
	pqxx/internal/gates/transaction-transactionfocus.hxx


nobase_nodist_include_HEADERS = \
	pqxx/config-public-compiler.h

EXTRA_DIST = pqxx/version.hxx.template
