MAINTAINERCLEANFILES=Makefile.in
	stamp-h.in

includedir=$(prefix)/include/pqxx
include_HEADERS=all.h \
	cachedresult.h \
	compiler.h \
	config.h \
	connection.h \
	connection_base.h \
	connectionitf.h \
	cursor.h \
	except.h \
	largeobject.h \
	nontransaction.h \
	result.h \
	robusttransaction.h \
	tablereader.h \
	tablestream.h \
	tablewriter.h \
	transaction.h \
	transaction_base.h \
	transactionitf.h \
	transactor.h \
	trigger.h \
	util.h


