MAINTAINERCLEANFILES=Makefile.in
	stamp-h.in

includedir=$(prefix)/include/pqxx
include_HEADERS= all all.h \
	cachedresult.h \
	compiler.h \
	config.h \
	connection connection.h \
	connection_base connection_base.h connectionitf.h \
	cursor.h \
	dbtransaction dbtransaction.h \
	except except.h \
	isolation isolation.h \
	largeobject largeobject.h \
	nontransaction nontransaction.h \
	result result.h \
	robusttransaction robusttransaction.h \
	tablereader tablereader.h \
	tablestream tablestream.h \
	tablewriter tablewriter.h \
	transaction transaction.h \
	transaction_base transaction_base.h transactionitf.h \
	transactor transactor.h \
	trigger trigger.h \
	util util.h


