MAINTAINERCLEANFILES=Makefile.in stamp-h.in

noinst_HEADERS = \
	compiler-internal.hxx \
	config-internal-autotools.h

nodist_noinst_HEADERS = \
	config.h \
	config-internal-compiler.h \
	config-internal-libpq.h

DISTCLEANFILES = \
	config-internal-autotools.h \
	config-internal-compiler.h \
	config-internal-libpq.h \
	config-public-compiler.h
