#nobase_include_HEADERS = \
#	pqxx/compiler.h \
#	pqxx/connection.h \
#	pqxx/cursor.h \
#	pqxx/nontransaction.h \
#	pqxx/result.h \
#	pqxx/robusttransaction.h \
#	pqxx/tablereader.h \
#	pqxx/tablestream.h \
#	pqxx/tablewriter.h \
#	pqxx/transaction.h \
#	pqxx/transactionitf.h \
#	pqxx/transactor.h \
#	pqxx/trigger.h \
#	pqxx/util.h
