INCLUDES=-I../include ${POSTGRES_INCLUDE}

check_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 

TESTS_ENVIRONMENT=PGHOST=frank PGDATABASE=template1 PGUSER=postgres

TESTS = test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 
XFAIL_TESTS = test6 test7 test8 test10 test13 test18 test20

test1_SOURCES = test1.cxx
test1_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test2_SOURCES = test2.cxx
test2_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test3_SOURCES = test3.cxx
test3_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test4_SOURCES = test4.cxx
test4_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test5_SOURCES = test5.cxx
test5_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test6_SOURCES = test6.cxx
test6_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test7_SOURCES = test7.cxx
test7_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test8_SOURCES = test8.cxx
test8_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test9_SOURCES = test9.cxx
test9_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test10_SOURCES = test10.cxx
test10_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test11_SOURCES = test11.cxx
test11_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test12_SOURCES = test12.cxx
test12_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test13_SOURCES = test13.cxx
test13_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test14_SOURCES = test14.cxx
test14_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test15_SOURCES = test15.cxx
test15_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test16_SOURCES = test16.cxx
test16_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test17_SOURCES = test17.cxx
test17_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test18_SOURCES = test18.cxx
test18_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test19_SOURCES = test19.cxx
test19_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}

test20_SOURCES = test20.cxx
test20_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
