MAINTAINERCLEANFILES=Makefile.in
	stamp-h.in

includedir=$(prefix)/include/pqxx
include_HEADERS=all.h \
	cachedresult.h \
	compiler.h \
	config.h \
	connection.h \
	connectionitf.h \
	cursor.h \
	except.h \
	largeobject.h \
	nontransaction.h \
	result.h \
	robusttransaction.h \
	tablereader.h \
	tablestream.h \
	tablewriter.h \
	transaction.h \
	transactionitf.h \
	transactor.h \
	trigger.h \
	util.h


