MAINTAINERCLEANFILES=Makefile.in
	stamp-h.in

includedir=$(prefix)/include/pqxx
include_HEADERS= pqxx all.h \
	cachedresult.h \
	compiler.h \
	config.h \
	connection connection.hxx connection.h \
	connection_base connection_base.hxx connection_base.h connectionitf.h \
	cursor.h \
	dbtransaction dbtransaction.hxx dbtransaction.h \
	except except.hxx except.h \
	isolation isolation.hxx isolation.h \
	largeobject largeobject.hxx largeobject.h \
	libcompiler.h \
	libconfig.h \
	nontransaction nontransaction.hxx nontransaction.h \
	result result.hxx result.h \
	robusttransaction robusttransaction.hxx robusttransaction.h \
	tablereader tablereader.hxx tablereader.h \
	tablestream tablestream.hxx tablestream.h \
	tablewriter tablewriter.hxx tablewriter.h \
	transaction transaction.hxx transaction.h \
	transaction_base transaction_base.hxx transaction_base.h \
	transactionitf.h \
	transactor transactor.hxx transactor.h \
	trigger trigger.hxx trigger.h \
	util util.hxx util.h


